--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <title>Yunhua Zhang</title>
   
-  <meta name="author" content="Jon Barron">
+  <meta name="author" content="Yunhua Zhang">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -60,9 +60,86 @@
               <strong>Yunhua Zhang</strong>, Ling Shao, Cees G.M. Snoek
               <br>
               <em>CVPR</em>, 2021
+              <br>
+                <a href="data/repetition.bib">bibtex</a> / <a href="https://eyewear-computing.org/EPIC_CVPR21/program">EPIC Workshop@CVPR 2021</a> / <a href="https://sightsound.org/#papers">Sight and Sound Workshop@CVPR 2021</a> / <a href="https://arxiv.org/pdf/2103.13096.pdf">arXiv</a>) / <a href="http://www.youtube.com/watch?v=NnePYprvFvA">video</a> / <a href="https://github.com/xiaobai1217/RepetitionCounting">code &amp; data</a>
               <p>We incorporate for the first time the corresponding sound into the repetition counting process. This benefits accuracy in challenging vision conditions such as occlusion, dramatic camera view changes, low resolution, etc.</p>
             </td>
           </tr>
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/IJCV2021.jpg" alt="blind-date" width="160" height="160">
+            </td>
+            <td width="75%" valign="middle">
+              <a href="https://link.springer.com/content/pdf/10.1007/s11263-021-01487-3.pdf">
+                <papertitle>Learning Regression and Verification Networks for Robust Long-term
+Tracking</papertitle>
+              </a>
+              <br>
+              <strong>Yunhua Zhang</strong>, Lijun Wang, Dong Wang, Jinqing Qi, Huchuan Lu
+              <br>
+              <em>IJCV</em>, 2021
+              <br>
+                <a href="data/ijcv2021.bib">bibtex</a> / <a href="https://link.springer.com/content/pdf/10.1007/s11263-021-01487-3.pdf">PDF</a>) / <a href="https://github.com/xiaobai1217/MBMD">code</a>
+              <p>This paper proposes a new visual tracking algorithm, which leverages the merits of both template matching approaches and classification models for long-term object detection and tracking.</p>
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/meta_updater.jpg" alt="blind-date" width="160" height="160">
+            </td>
+            <td width="75%" valign="middle">
+              <a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Dai_High-Performance_Long-Term_Tracking_With_Meta-Updater_CVPR_2020_paper.pdf">
+                <papertitle>High-Performance Long-Term Tracking with Meta-Updater</papertitle>
+              </a>
+              <br>
+              Kenan Dai, <strong>Yunhua Zhang</strong>, Dong Wang, Jianhua Li, Huchuan Lu, Xiaoyun Yang
+              <br>
+              <em>CVPR</em>, 2020 &nbsp <font color="red"><strong>(Best Paper Award Nominee)</strong></font>
+              <br>
+                <a href="data/cvpr2020.bib">bibtex</a> / <a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Dai_High-Performance_Long-Term_Tracking_With_Meta-Updater_CVPR_2020_paper.pdf">PDF</a>) / <a href="https://github.com/Daikenan/LTMU">code</a>
+              <p>This paper proposes a new visual tracking algorithm, which leverages the merits of both template matching approaches and classification models for long-term object detection and tracking.</p>
+              <p>In this work, we propose a novel offline-trained Meta-Updater to address an important but unsolved problem: Is the tracker ready for updating in the current frame?</p>
+            </td>
+          </tr>
+
+            <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/eccv2018.jpg" alt="blind-date" width="160" height="160">
+            </td>
+            <td width="75%" valign="middle">
+              <a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Dai_High-Performance_Long-Term_Tracking_With_Meta-Updater_CVPR_2020_paper.pdf">
+                <papertitle>Structured Siamese Network for Real-Time Visual Tracking</papertitle>
+              </a>
+              <br>
+              <strong>Yunhua Zhang</strong>, Lijun Wang, Jinqing Qi, Dong Wang, Mengyang Feng, Huchuan Lu
+              <br>
+              <em>ECCV</em>, 2018 
+              <br>
+                <a href="data/eccv2018.bib">bibtex</a> / <a href="https://openaccess.thecvf.com/content_ECCV_2018/papers/Yunhua_Zhang_Structured_Siamese_Network_ECCV_2018_paper.pdf">PDF</a>) </a>
+              <p>In this paper, we propose a local structure learning method, which simultaneously considers the local patterns of the target and their structural relationships for more accurate target tracking.</p>
+            </td>
+          </tr>
+
+          <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
+          <tr>
+            <td>
+              <heading>Challenges</heading>
+            </td>
+          </tr>
+        </tbody></table>
+        <table width="100%" align="center" border="0" cellpadding="20"><tbody>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/vot.jpg"></td>
+            <td width="75%" valign="center">
+              <a href="https://github.com/Daikenan/LT_DSE">The winning track of VOT2019 Long-term Tracking Challenge, ICCV 2019 Workshop</a>
+              <br><br>
+              <a href="https://github.com/xiaobai1217/MBMD">The winning track of VOT2018 Long-term Tracking Challenge, ECCV 2018 Workshop</a>
+            </td>
+          </tr>
+
+
 
 
         </tbody></table>
