--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <a href="mailto:y.zhang9@uva.nl">Email</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=Yrw15pUAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://github.com/xiaobai1217/">Github</a>
+                <a href="https://github.com/Awesome-Video-Datasets/">Awesome-Video-Datasets</a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
@@ -61,7 +62,7 @@
               <br>
               <em>CVPR</em>, 2021
               <br>
-                <a href="data/repetition.bib">bibtex</a> / <a href="https://eyewear-computing.org/EPIC_CVPR21/program">EPIC Workshop@CVPR 2021</a> / <a href="https://sightsound.org/#papers">Sight and Sound Workshop@CVPR 2021</a> / <a href="https://arxiv.org/pdf/2103.13096.pdf">arXiv</a>) / <a href="http://www.youtube.com/watch?v=NnePYprvFvA">video</a> / <a href="https://github.com/xiaobai1217/RepetitionCounting">code &amp; data</a>
+                <a href="data/repetition.bib">bibtex</a> / <a href="https://eyewear-computing.org/EPIC_CVPR21/program">EPIC Workshop@CVPR 2021</a> / <a href="https://sightsound.org/#papers">Sight and Sound Workshop@CVPR 2021</a> / <a href="https://arxiv.org/pdf/2103.13096.pdf">arXiv</a> / <a href="http://www.youtube.com/watch?v=NnePYprvFvA">video</a> / <a href="https://github.com/xiaobai1217/RepetitionCounting">code &amp; data</a>
               <p>We incorporate for the first time the corresponding sound into the repetition counting process. This benefits accuracy in challenging vision conditions such as occlusion, dramatic camera view changes, low resolution, etc.</p>
             </td>
           </tr>
@@ -80,7 +81,7 @@ Tracking</papertitle>
               <br>
               <em>IJCV</em>, 2021
               <br>
-                <a href="data/ijcv2021.bib">bibtex</a> / <a href="https://link.springer.com/content/pdf/10.1007/s11263-021-01487-3.pdf">PDF</a>) / <a href="https://github.com/xiaobai1217/MBMD">code</a>
+                <a href="data/ijcv2021.bib">bibtex</a> / <a href="https://link.springer.com/content/pdf/10.1007/s11263-021-01487-3.pdf">PDF</a> / <a href="https://github.com/xiaobai1217/MBMD">code</a>
               <p>This paper proposes a new visual tracking algorithm, which leverages the merits of both template matching approaches and classification models for long-term object detection and tracking.</p>
             </td>
           </tr>
@@ -98,7 +99,7 @@ Tracking</papertitle>
               <br>
               <em>CVPR</em>, 2020 &nbsp <font color="red"><strong>(Best Paper Award Nominee)</strong></font>
               <br>
-                <a href="data/cvpr2020.bib">bibtex</a> / <a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Dai_High-Performance_Long-Term_Tracking_With_Meta-Updater_CVPR_2020_paper.pdf">PDF</a>) / <a href="https://github.com/Daikenan/LTMU">code</a>
+                <a href="data/cvpr2020.bib">bibtex</a> / <a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Dai_High-Performance_Long-Term_Tracking_With_Meta-Updater_CVPR_2020_paper.pdf">PDF</a> / <a href="https://github.com/Daikenan/LTMU">code</a>
               <p>This paper proposes a new visual tracking algorithm, which leverages the merits of both template matching approaches and classification models for long-term object detection and tracking.</p>
               <p>In this work, we propose a novel offline-trained Meta-Updater to address an important but unsolved problem: Is the tracker ready for updating in the current frame?</p>
             </td>
@@ -117,7 +118,7 @@ Tracking</papertitle>
               <br>
               <em>ECCV</em>, 2018 
               <br>
-                <a href="data/eccv2018.bib">bibtex</a> / <a href="https://openaccess.thecvf.com/content_ECCV_2018/papers/Yunhua_Zhang_Structured_Siamese_Network_ECCV_2018_paper.pdf">PDF</a>) </a>
+                <a href="data/eccv2018.bib">bibtex</a> / <a href="https://openaccess.thecvf.com/content_ECCV_2018/papers/Yunhua_Zhang_Structured_Siamese_Network_ECCV_2018_paper.pdf">PDF</a> </a>
               <p>In this paper, we propose a local structure learning method, which simultaneously considers the local patterns of the target and their structural relationships for more accurate target tracking.</p>
             </td>
           </tr>
