--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ Tracking</papertitle>
           <tr>
             <td style="padding:0px">
               <br>
-              <p style="text-align:right;font-size:small;">
+              <p style="text-align:left;font-size:small;">
                 This website uses the template provided by <a href="https://jonbarron.info/">Jon Barron</a>. 
                 <strong>Do not</strong> scrape the HTML from the deployed instance of this website at http://jonbarron.info,
                 as it includes analytics tags that you do not want on your own website &mdash; use the github code instead.
