--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/IJCV2021.png" alt="blind-date" width="160" height="160">
+              <img src="images/IJCV2021.png" alt="blind-date" width="160" height="100">
             </td>
             <td width="75%" valign="middle">
               <a href="https://link.springer.com/content/pdf/10.1007/s11263-021-01487-3.pdf">
@@ -88,7 +88,7 @@ Tracking</papertitle>
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/meta_updater.png" alt="blind-date" width="160" height="160">
+              <img src="images/meta_updater.png" alt="blind-date" width="160" height="100">
             </td>
             <td width="75%" valign="middle">
               <a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Dai_High-Performance_Long-Term_Tracking_With_Meta-Updater_CVPR_2020_paper.pdf">
@@ -106,7 +106,7 @@ Tracking</papertitle>
 
             <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/eccv2018.png" alt="blind-date" width="160" height="160">
+              <img src="images/eccv2018.png" alt="blind-date" width="160" height="100">
             </td>
             <td width="75%" valign="middle">
               <a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Dai_High-Performance_Long-Term_Tracking_With_Meta-Updater_CVPR_2020_paper.pdf">
@@ -131,7 +131,7 @@ Tracking</papertitle>
         </tbody></table>
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
           <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/vot.png"></td>
+            <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/vot.png" width="160" height="160"></td>
             <td width="75%" valign="center">
               <a href="https://github.com/Daikenan/LT_DSE">The winning track of VOT2019 Long-term Tracking Challenge, ICCV 2019 Workshop</a>
               <br><br>
