--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <p style="text-align:center">
                 <a href="mailto:y.zhang9@uva.nl">Email</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=Yrw15pUAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
-                <a href="https://github.com/xiaobai1217/">Github</a>
+                <a href="https://github.com/xiaobai1217/">Github</a> &nbsp/&nbsp 
                 <a href="https://github.com/Awesome-Video-Datasets/">Awesome-Video-Datasets</a>
               </p>
             </td>
@@ -131,7 +131,7 @@ Tracking</papertitle>
         </tbody></table>
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
           <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/vot.png" width="160" height="160"></td>
+            <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/vot.png" width="120" height="160"></td>
             <td width="75%" valign="center">
               <a href="https://github.com/Daikenan/LT_DSE">The winning track of VOT2019 Long-term Tracking Challenge, ICCV 2019 Workshop</a>
               <br><br>
