--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="text-align:center">
-                <name>Jon Barron</name>
+                <name>Yunhua Zhang</name>
               </p>
               <p> I am a PhD candidate at University of Amsterdam (UvA), supervised by Prof. <a href="https://www.ceessnoek.info/">Cees Snoek</a>. 
               </p>
