--- a/index.html
+++ b/index.html
@@ -133,9 +133,20 @@ Tracking</papertitle>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/vot.png" width="120" height="160"></td>
             <td width="75%" valign="center">
-              <a href="https://github.com/Daikenan/LT_DSE">The winning track of VOT2019 Long-term Tracking Challenge, ICCV 2019 Workshop</a>
+            	The winning track of VOT2019 Long-term Tracking Challenge
+            	<br>
+            	Kenan Dai, <strong>Yunhua Zhang</strong>, Jianhua Li, Dong Wang, Xiaoyun Yang, Huchuan Lu
+            	<br>
+            	<em>ICCV Workshop</em>, 2019
+            	<br>
+              <a href="https://openaccess.thecvf.com/content_ECCVW_2018/papers/11129/Kristan_The_sixth_Visual_Object_Tracking_VOT2018_challenge_results_ECCVW_2018_paper.pdf">Report</a><a href="https://github.com/Daikenan/LT_DSE">Code</a>
               <br><br>
-              <a href="https://github.com/xiaobai1217/MBMD">The winning track of VOT2018 Long-term Tracking Challenge, ECCV 2018 Workshop</a>
+              The winning track of VOT2018 Long-term Tracking Challenge
+              <br>
+              <strong>Yunhua Zhang</strong>, Lijun Wang, Dong Wang, JinQing Qi, Huchuan Lu
+              <br>
+              <em>ECCV Workshop</em>, 2018
+              <a href="https://openaccess.thecvf.com/content_ICCVW_2019/papers/VOT/Kristan_The_Seventh_Visual_Object_Tracking_VOT2019_Challenge_Results_ICCVW_2019_paper.pdf">Report</a><a href="https://github.com/xiaobai1217/MBMD">Code</a>
             </td>
           </tr>
 
