--- a/index.html
+++ b/index.html
@@ -139,14 +139,15 @@ Tracking</papertitle>
             	<br>
             	<em>ICCV Workshop</em>, 2019
             	<br>
-              <a href="https://openaccess.thecvf.com/content_ECCVW_2018/papers/11129/Kristan_The_sixth_Visual_Object_Tracking_VOT2018_challenge_results_ECCVW_2018_paper.pdf">Report</a><a href="https://github.com/Daikenan/LT_DSE">Code</a>
+              <a href="https://openaccess.thecvf.com/content_ECCVW_2018/papers/11129/Kristan_The_sixth_Visual_Object_Tracking_VOT2018_challenge_results_ECCVW_2018_paper.pdf">Report</a> / <a href="https://github.com/Daikenan/LT_DSE">Code</a>
               <br><br>
               The winning track of VOT2018 Long-term Tracking Challenge
               <br>
               <strong>Yunhua Zhang</strong>, Lijun Wang, Dong Wang, JinQing Qi, Huchuan Lu
               <br>
               <em>ECCV Workshop</em>, 2018
-              <a href="https://openaccess.thecvf.com/content_ICCVW_2019/papers/VOT/Kristan_The_Seventh_Visual_Object_Tracking_VOT2019_Challenge_Results_ICCVW_2019_paper.pdf">Report</a><a href="https://github.com/xiaobai1217/MBMD">Code</a>
+              <br>
+              <a href="https://openaccess.thecvf.com/content_ICCVW_2019/papers/VOT/Kristan_The_Seventh_Visual_Object_Tracking_VOT2019_Challenge_Results_ICCVW_2019_paper.pdf">Report</a> / <a href="https://github.com/xiaobai1217/MBMD">Code</a>
             </td>
           </tr>
 
