--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                I'm interested in computer vision, video understanding and audiovisual learning.
+                I'm interested in computer vision, video understanding, audiovisual learning and object tracking.
               </p>
             </td>
           </tr>
