--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <a href="mailto:y.zhang9@uva.nl">Email</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=Yrw15pUAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://github.com/xiaobai1217/">Github</a> &nbsp/&nbsp 
+                <a href="https://ellis.eu/projects/multimodal-video-learning">ELLIS PhD Program</a> &nbsp/&nbsp 
                 <a href="https://github.com/xiaobai1217/Awesome-Video-Datasets">Awesome-Video-Datasets</a>
               </p>
             </td>
@@ -62,7 +63,7 @@
               <br>
               <em>CVPR</em>, 2021
               <br>
-                <a href="data/repetition.bib">bibtex</a> / <a href="https://arxiv.org/pdf/2103.13096.pdf">arXiv</a> / <a href="https://user-images.githubusercontent.com/22721775/112766700-2c7b7980-9013-11eb-8667-95ce6ec31067.mp4">video</a> / <a href="https://github.com/xiaobai1217/RepetitionCounting">code &amp; data</a>
+                <a href="data/repetition.bib">bibtex</a> / <a href="https://arxiv.org/pdf/2103.13096.pdf">arXiv</a> / <a href="https://user-images.githubusercontent.com/22721775/112766700-2c7b7980-9013-11eb-8667-95ce6ec31067.mp4">demo video</a> / <a href="https://drive.google.com/file/d/10n3SuvPM5d2YGUbMYxZpeo1rLhaOwQ3O/view?usp=sharing">CVPR Presentation</a> / <a href="https://github.com/xiaobai1217/RepetitionCounting">code &amp; data</a>
                <br>
                Also presented at <a href="https://eyewear-computing.org/EPIC_CVPR21/program">EPIC Workshop@CVPR 2021</a> and <a href="https://sightsound.org/#papers">Sight and Sound Workshop@CVPR 2021</a>
               <p>We incorporate for the first time the corresponding sound into the repetition counting process. This benefits accuracy in challenging vision conditions such as occlusion, dramatic camera view changes, low resolution, etc.</p>
