--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
                 <a href="https://scholar.google.com/citations?user=Yrw15pUAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://github.com/xiaobai1217/">Github</a> &nbsp/&nbsp 
                 <a href="https://ellis.eu/projects/multimodal-video-learning">ELLIS PhD Program</a> &nbsp/&nbsp 
+              </p>
+              <p style="text-align:center">
                 <a href="https://github.com/xiaobai1217/Awesome-Video-Datasets">Awesome-Video-Datasets</a>
               </p>
             </td>
