--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <br>
               <em>CVPR</em>, 2021
               <br>
-                <a href="data/repetition.bib">bibtex</a> / <a href="https://arxiv.org/pdf/2103.13096.pdf">arXiv</a> / <a href="https://user-images.githubusercontent.com/22721775/112766700-2c7b7980-9013-11eb-8667-95ce6ec31067.mp4">demo video</a> / <a href="https://drive.google.com/file/d/10n3SuvPM5d2YGUbMYxZpeo1rLhaOwQ3O/view?usp=sharing">CVPR Presentation</a> / <a href="https://github.com/xiaobai1217/RepetitionCounting">code &amp; data</a>
+                <a href="data/repetition.bib">bibtex</a> / <a href="https://arxiv.org/pdf/2103.13096.pdf">arXiv</a> / <a href="https://user-images.githubusercontent.com/22721775/112766700-2c7b7980-9013-11eb-8667-95ce6ec31067.mp4">demo video</a> / <a href="https://drive.google.com/file/d/10n3SuvPM5d2YGUbMYxZpeo1rLhaOwQ3O/view?usp=sharing">CVPR presentation</a> / <a href="https://github.com/xiaobai1217/RepetitionCounting">code &amp; data</a>
                <br>
                Also presented at <a href="https://eyewear-computing.org/EPIC_CVPR21/program">EPIC Workshop@CVPR 2021</a> and <a href="https://sightsound.org/#papers">Sight and Sound Workshop@CVPR 2021</a>
               <p>We incorporate for the first time the corresponding sound into the repetition counting process. This benefits accuracy in challenging vision conditions such as occlusion, dramatic camera view changes, low resolution, etc.</p>
