--- a/index.html
+++ b/index.html
@@ -50,6 +50,23 @@
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/cvpr2022.png" alt="blind-date" width="160" height="160">
+            </td>
+            <td width="75%" valign="middle">
+                <papertitle>Audio-Adaptive Activity Recognition Across Video Domains</papertitle>
+              </a>
+              <br>
+              <strong>Yunhua Zhang</strong>, Hazel Doughty, Ling Shao, Cees G.M. Snoek
+              <br>
+              <em>CVPR</em>, 2022
+              <br>
+                <a href="data/cvpr2022.bib">bibtex</a>
+               <br>
+              <p>This paper strives for activity recognition under domain shift, for example caused by change of scenery or camera viewpoint. Different from vision-focused works we leverage activity sounds for domain adaptation as they have less variance across domains and can reliably indicate which activities are not happening. </p>
+            </td>
+          </tr>
 
 
           <tr>
