--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <br>
               <em>CVPR</em>, 2022
               <br>
-                <a href="data/cvpr2022.bib">bibtex</a>
+                <a href="data/cvpr2022.bib">bibtex</a> / <a href="https://github.com/xiaobai1217/DomainAdaptation">code &amp; data</a> / <a href="https://xiaobai1217.github.io/DomainAdaptation/">website</a> / <a href="https://youtu.be/Lh3gb6NMhB4">demo video</a>
                <br>
               <p>This paper strives for activity recognition under domain shift, for example caused by change of scenery or camera viewpoint. Different from vision-focused works we leverage activity sounds for domain adaptation as they have less variance across domains and can reliably indicate which activities are not happening. </p>
             </td>
