--- a/index.html
+++ b/index.html
@@ -50,6 +50,34 @@
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <heading>News</heading>
+              <p>
+                Proud to be an outstanding reviewer for ECCV 2022. 
+              </p>
+            </td>
+          </tr>
+        </tbody></table>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+
+            <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/dark.png" alt="blind-date" width="160" height="160">
+            </td>
+            <td width="75%" valign="middle">
+                <papertitle>Day2Dark: Pseudo-Supervised Activity Recognition beyond Silent Daylight</papertitle>
+              </a>
+              <br>
+              <strong>Yunhua Zhang</strong>, Hazel Doughty, Cees G.M. Snoek
+              <br>
+                <a href="https://arxiv.org/abs/2203.14240">arXiv</a>
+              <br>
+                <p>State-of-the-art activity recognizers are effective during the day, but not trustworthy in the dark. The main causes are the distribution shift from the lower color contrast as well as the limited availability of labeled dark videos. Our goal is to recognize activities in the dark as well as in the day. </p>
+            </td>
+          </tr>
+
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/cvpr2022.png" alt="blind-date" width="160" height="160">
