--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Yunhua Zhang</name>
               </p>
-              <p> I am a PhD candidate at University of Amsterdam (UvA), supervised by Prof. <a href="https://www.ceessnoek.info/">Cees Snoek</a>. 
+              <p> I am a PhD candidate at University of Amsterdam (UvA), advised by Prof. <a href="https://www.ceessnoek.info/">Cees Snoek</a> and Dr. <a href="https://hazeldoughty.github.io/">Hazel Doughty</a>. 
               </p>
 
               <p style="text-align:center">
