--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
               <img src="images/cvpr2022.png" alt="blind-date" width="160" height="160">
             </td>
             <td width="75%" valign="middle">
+              <a href="https://openaccess.thecvf.com/content/CVPR2022/papers/Zhang_Audio-Adaptive_Activity_Recognition_Across_Video_Domains_CVPR_2022_paper.pdf">
                 <papertitle>Audio-Adaptive Activity Recognition Across Video Domains</papertitle>
               </a>
               <br>
