--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>News</heading>
               <ul>
-              <li> 2022/10. Proud to be an outstanding reviewer for ECCV 2022. </li>
+              <li> 2022/10. Happy to be an outstanding reviewer for ECCV 2022. </li>
               <li> 2022/09. Joined Meta Reality Labs as a research scientist intern in Redmond, WA. </li>
               </ul>
             </td>
