--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <heading>News</heading>
               <ul>
               <li> 2022/10. Happy to be an outstanding reviewer for ECCV 2022. </li>
-              <li> 2022/09. Joined Meta Reality Labs as a research scientist intern in Redmond, WA. </li>
+              <li> 2022/09-2023/01. Joined Meta Reality Labs as a research scientist intern in Redmond, WA. </li>
               </ul>
             </td>
           </tr>
