--- a/index.html
+++ b/index.html
@@ -72,6 +72,21 @@
 
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/unseen.png" alt="blind-date" width="160" height="40">
+            </td>
+            <td width="75%" valign="middle">
+                <papertitle>Learning Unseen Modality Interaction</papertitle>
+              </a>
+              <br>
+              <strong>Yunhua Zhang</strong>, Hazel Doughty, Cees G.M. Snoek
+              <br>
+                <a href="https://arxiv.org/abs/2306.12795">arXiv</a>
+              <br>
+                <p>Multimodal learning assumes all modality combinations of interest are available during training to learn cross-modal correspondences. In this paper, we challenge this modality-complete assumption for multimodal learning and instead strive for generalization to unseen modality combinations during inference. </p>
+            </td>
+          </tr>
 
             <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
