--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Yunhua Zhang</name>
               </p>
-              <p> I am a PhD candidate at University of Amsterdam (UvA), advised by Prof. <a href="https://www.ceessnoek.info/">Cees Snoek</a> and Dr. <a href="https://hazeldoughty.github.io/">Hazel Doughty</a>. 
+              <p> I am a PhD candidate at University of Amsterdam (UvA), advised by handsome Prof. <a href="https://www.ceessnoek.info/">Cees Snoek</a> and Dr. <a href="https://hazeldoughty.github.io/">Hazel Doughty</a>. 
               </p>
 
               <p style="text-align:center">
@@ -81,6 +81,8 @@
               </a>
               <br>
               <strong>Yunhua Zhang</strong>, Hazel Doughty, Cees G.M. Snoek
+              <br>
+              <em>NeurIPS</em>, 2023
               <br>
                 <a href="https://arxiv.org/abs/2306.12795">arXiv</a>
               <br>
