--- a/index.html
+++ b/index.html
@@ -39,12 +39,25 @@
           </tr>
         </tbody></table>
 
+    <table align=center width=850px style="color:red">
+      <center>
+        <tr>
+          <td>
+            <b><span>&#128293;&#128293;&#128293;</span> &nbsp; &nbsp; I am on the job market! </b>
+
+          </td>
+        </tr>
+      </center>
+    </table>
+
+    <p> </p>
+
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                I'm interested in computer vision, video understanding, audiovisual learning and object tracking.
+                I'm interested in computer vision, video understanding, multimodal learning and foundation models.
               </p>
             </td>
           </tr>
@@ -72,6 +85,24 @@
 
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/low-resource.png" alt="blind-date" width="160" height="100">
+            </td>
+            <td width="75%" valign="middle">
+                <papertitle>Low-Resource Vision Challenges for Foundation Models</papertitle>
+              </a>
+              <br>
+              <strong>Yunhua Zhang</strong>, Hazel Doughty, Cees G.M. Snoek
+              <br>
+              <em>In submission</em>, 2024
+              <br>
+                <a href="https://arxiv.org/abs/2401.04716">arXiv</a> / <a href="https://xiaobai1217.github.io/Low-Resource-Vision/">Website</a> / <a href="https://github.com/xiaobai1217/Low-Resource-Vision/">Code</a>
+              <br>
+                <p>Low-resource settings are well-established in natural language processing, where many languages lack sufficient data for machine learning at scale. However, low-resource problems are under-explored in computer vision. In this paper, we strive to address this gap and explore the challenges of low-resource image tasks with vision foundation models.  </p>
+            </td>
+          </tr>
+
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/unseen.png" alt="blind-date" width="160" height="40">
