--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                I'm interested in computer vision, video understanding, multimodal learning and foundation models.
+                My research areas are computer vision, <mark><b>video understanding</b>, <b>multimodal learning</b> and <b>foundation models</b></mark>.
               </p>
             </td>
           </tr>
