--- a/index.html
+++ b/index.html
@@ -63,17 +63,18 @@
           </tr>
         </tbody></table>
 
-<!--         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>News</heading>
               <ul>
+              <li> 2024/04. Incoming research scientist intern at Meta (Menlo Park). </li>
               <li> 2022/10. Happy to be an outstanding reviewer for ECCV 2022. </li>
               <li> 2022/09-2023/01. Did an internship at Meta Reality Labs as a research scientist intern in Redmond, WA. </li>
               </ul>
             </td>
           </tr>
-        </tbody></table> -->
+        </tbody></table>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
@@ -95,7 +96,7 @@
               <br>
               <strong>Yunhua Zhang</strong>, Hazel Doughty, Cees G.M. Snoek
               <br>
-              <em>In submission</em>, 2024
+              <em>CVPR</em>, 2024
               <br>
                 <a href="https://arxiv.org/abs/2401.04716">arXiv</a> / <a href="https://xiaobai1217.github.io/Low-Resource-Vision/">Website</a> / <a href="https://github.com/xiaobai1217/Low-Resource-Vision/">Code</a>
               <br>
