--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Yunhua Zhang</name>
               </p>
-              <p> I am a PhD candidate at University of Amsterdam (UvA), advised by Prof. <a href="https://www.ceessnoek.info/">Cees Snoek</a> and Dr. <a href="https://hazeldoughty.github.io/">Hazel Doughty</a>. 
+              <p> I obtained my PhD degree from University of Amsterdam (UvA), advised by Prof. <a href="https://www.ceessnoek.info/">Cees Snoek</a> and Dr. <a href="https://hazeldoughty.github.io/">Hazel Doughty</a>. 
               </p>
 
               <p style="text-align:center">
@@ -39,7 +39,7 @@
           </tr>
         </tbody></table>
 
-    <table align=center width=850px style="color:red">
+<!--     <table align=center width=850px style="color:red">
       <center>
         <tr>
           <td>
@@ -48,7 +48,7 @@
           </td>
         </tr>
       </center>
-    </table>
+    </table> -->
 
     <p> </p>
 
@@ -57,7 +57,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                My research areas are computer vision, <mark><b>video understanding</b>, <b>multimodal learning</b> and <b>foundation models</b></mark>.
+                My research areas are <mark><b>generative models</b>, <b>video understanding</b> and <b>multimodal learning</b></mark>. 
               </p>
             </td>
           </tr>
@@ -68,7 +68,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>News</heading>
               <ul>
-              <li> 2024/04. Incoming research scientist intern at Meta (Menlo Park). </li>
+              <li> 2024/07-2024/10. Did an internship at Meta FB Reels as a research scientist intern in Menlo Park, CA. </li>
               <li> 2022/10. Happy to be an outstanding reviewer for ECCV 2022. </li>
               <li> 2022/09-2023/01. Did an internship at Meta Reality Labs as a research scientist intern in Redmond, WA. </li>
               </ul>
@@ -131,6 +131,8 @@
               </a>
               <br>
               <strong>Yunhua Zhang</strong>, Hazel Doughty, Cees G.M. Snoek
+              <br>
+              <em>IJCV</em>, 2024
               <br>
                 <a href="https://arxiv.org/abs/2212.02053">arXiv</a>
               <br>
