--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               </p>
 
               <p style="text-align:center">
-                <a href="mailto:y.zhang9@uva.nl">Email</a> &nbsp/&nbsp
+                <a href="mailto:yunhua.zhang12@gmail.com">Email</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=Yrw15pUAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://github.com/xiaobai1217/">Github</a> &nbsp/&nbsp 
                 <a href="https://ellis.eu/projects/multimodal-video-learning">ELLIS PhD Program</a>
